[package]
name = "napi-rs-addon"
version = "0.1.0"
authors = ["Jolyon Saunders <jol.saund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-rs = "0.2.3"
napi-rs-derive = "0.1.0"

[build-dependencies]
napi-build = "0.1.1"
