[package]
name = "node-bindgen-addon"
version = "0.1.0"
authors = ["Jolyon Saunders <jol.saund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = "1.3.0"

[build-dependencies]
node-bindgen = { version = "1.3.0", features = ["build"] }
